--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,11 @@ beautifulsoup4
 playwright
 google-search-results
 gunicorn
+Flask
+langchain
+langchain-core
+langchain-google-genai
+openai
+
 
 
